Updated master layout file.

--- a/public/css/p3.css
+++ b/public/css/p3.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #000000;; /*#f5f5f5;*/
 }
 
 
@@ -39,3 +39,8 @@ code {
 header{
     padding-bottom: 50px;
 }
+
+/*
+.navbar-inverse{
+    background: #EE7600;
+}*/
